# symvision

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml
src/symvision/: __init__.py  __main__.py  api.py  cli.py  discovery.py  external.py  git.py  models.py  pragmas.py  scanner.py
tests/: conftest.py  test_cli.py  test_cli_options.py  test_discovery.py  test_external.py  test_external_resolution.py  test_pragma_validation.py  test_pragmas.py  test_scanner.py  test_usage.py
