[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "symvision"
version = "0.0.0"
description = "Symbol-visibility linter for Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bryan Bugyi" }]
maintainers = [{ name = "Bryan Bugyi" }]
keywords = ["lint", "python", "symbols", "visibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bbugyi200/symvision"
Repository = "https://github.com/bbugyi200/symvision"
Issues = "https://github.com/bbugyi200/symvision/issues"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "toobig",
    "twine",
]

[project.scripts]
symvision = "symvision.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/symvision"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "UP", "W"]

[tool.mypy]
files = ["src"]
mypy_path = ["src"]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
source_pkgs = ["symvision"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

